# wmstickynotes

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  wmstickynotes.1  wmstickynotes.c  wmstickynotes.h
